--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: Daniel Schuch
-url: 'http://webjeda.com'
+
+title: Resume Dr. Daniel Schuch 
+url: 'https://schuch666.github.io/'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
