--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site Settings
 
 title: Resume Dr. Daniel Schuch 
-url: 'https://schuch666.github.io/'
+url: 'https://schuch666.github.io'
 
 #change it according to your repository name
 # disabling since we are using a custom domain
