--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Site Settings
 
-title: Resume Dr. Daniel Schuch 
+title: Daniel Schuch 
 url: 'https://schuch666.github.io'
 
 #change it according to your repository name
