--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: 'https://schuch666.github.io'
 
 description: online resume updated in June 2024
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
-theme_skin: ceramic # blue turquoise green berry orange ceramic
+theme_skin: berry # blue turquoise green berry orange ceramic
 chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
